--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>Кликер</h1>
-        <p>Монеты: <span id="coins">0</span></p>
-        <div id="click-area">
-            <img src="your-image.png" alt="Click me!" id="click-image">
-        </div>
-        <button id="referral-button">Реферальная ссылка</button>
-        <p id="referral-link"></p>
+        <header>
+            <h1>🔥 Кликер Гейм 🔥</h1>
+        </header>
+        <main>
+            <p class="coins-display">💰 Монеты: <span id="coins">0</span></p>
+            <div id="click-area" class="click-area">
+                <img src="your-image.png" alt="Click me!" id="click-image">
+            </div>
+        </main>
+        <footer>
+            <button id="referral-button" class="button">Реферальная ссылка</button>
+            <p id="referral-link"></p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
