--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game">
-        <h1>Игра Кликер</h1>
+        <h1>Игра Клвапвкер</h1>
         <div id="coins">0</div>
         <img id="click-image" src="image.png" alt="Click me" />
         <div>
