--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <h1>Кликер в Telegram</h1>
     <div id="coins">0</div>
-    <img id="click-image" src="path_to_your_image.jpg" alt="Click me">
+    <img id="click-image" src="image.png" alt="Click me">
     <div id="referral-button">Получить реферальную ссылку</div>
     <div id="referral-link"></div>
     <ul id="leaderboard-list"></ul>
