--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <title>Кликер в Telegram</title>
+    <title>Кликер в Tel555egram</title>
     <style>
         body {
             font-family: Arial, sans-serif;
