--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1>Кликер в Telegram</h1>
+    <h1>Кликер в Telegram!!</h1>
     <div id="coins">0</div>
     <img id="click-image" src="image.png" alt="Click me">
     <div id="referral-button">Получить реферальную ссылку</div>
