--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <title>Кликер в Telegram</title>
     <style>
         body {
@@ -11,6 +11,8 @@
             background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+            overflow: hidden; /* Отключение прокрутки */
+            height: 100vh; /* Фиксированная высота для предотвращения прокрутки */
         }
 
         #coins {
@@ -25,12 +27,19 @@
             margin-top: 20px;
         }
 
-        #referral-link {
+        #referral-button {
             margin-top: 20px;
             font-size: 1.2em;
             color: #007bff;
             text-decoration: underline;
             cursor: pointer;
+        }
+
+        #referral-link {
+            margin-top: 20px;
+            font-size: 1.2em;
+            color: #007bff;
+            text-decoration: underline;
         }
 
         #leaderboard-list {
@@ -43,7 +52,6 @@
             margin: 10px 0;
         }
     </style>
-    <!-- Подключаем Telegram Web App API -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
