--- a/index.html
+++ b/index.html
@@ -4,54 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <title>Кликер в Telegram</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            overflow: hidden; /* Отключение прокрутки */
-            height: 100vh; /* Фиксированная высота для предотвращения прокрутки */
-        }
-
-        #coins {
-            font-size: 2em;
-            margin-top: 20px;
-        }
-
-        #click-image {
-            width: 200px;
-            height: 200px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-
-        #referral-button {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #007bff;
-            text-decoration: underline;
-            cursor: pointer;
-        }
-
-        #referral-link {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #007bff;
-            text-decoration: underline;
-        }
-
-        #leaderboard-list {
-            margin-top: 30px;
-            padding: 0;
-            list-style: none;
-        }
-
-        #leaderboard-list li {
-            margin: 10px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"> <!-- Подключение внешнего CSS -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
