--- a/index.html
+++ b/index.html
@@ -13,11 +13,46 @@
         <img id="top-image" src="top-image.png" alt="Top Image">
         <div id="coins">0</div>
         <img id="click-image" src="coin-image.png" alt="Click me">
-        <img id="referral-button" src="friends-icon.png" alt="Friends">
+		<table>
+		<tr>
+        <td><img id="referral-button" src="friends-icon.png" alt="Friends"></td>
+        <td><img id="profile-button" src="friends-icon.png" alt="Profile"></td>
+		</tr>
+        
+        <!-- Меню для реферальной ссылки -->
         <div id="referral-menu">
             <div id="referral-copy" class="referral-option">Копировать ссылку</div>
             <div id="referral-share" class="referral-option">Отправить друзьям</div>
         </div>
+
+        <!-- Модальное окно с профилем -->
+        <div id="profile-modal" class="modal">
+            <div class="modal-content">
+                <span id="close-profile" class="close">&times;</span>
+                <h2>Профиль игрока</h2>
+                <div id="profile-info">
+                    <img id="profile-avatar" src="" alt="Avatar">
+                    <p id="profile-username">Имя: </p>
+                    <p id="profile-coins">Клики: </p>
+                    <p id="profile-start-date">Дата начала игры: </p>
+                    <p id="profile-rank">Ранг: </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Модальное окно с реферальной ссылкой -->
+        <div id="referral-modal" class="modal">
+            <div class="modal-content">
+                <span id="close-referral" class="close">&times;</span>
+                <h2>Ваша реферальная ссылка</h2>
+                <div id="referral-link-container">
+                    <input type="text" id="referral-link" readonly>
+                    <button id="referral-copy-btn">Копировать</button>
+                </div>
+                <button id="referral-share-btn">Поделиться</button>
+            </div>
+        </div>
+
         <div id="referral-link"></div>
         <ul id="leaderboard-list"></ul>
     </div>
