--- a/index.html
+++ b/index.html
@@ -7,22 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Добавляем Font Awesome -->
 </head>
 <body>
     <div id="game-container">
-        <img id="top-image" src="top-image.png" alt="Top Image">
-        <div id="coins">0</div>
-        <img id="click-image" src="coin-image.png" alt="Click me">
-		<table>
-		<tr>
-        <td><img id="referral-button" src="friends-icon.png" alt="Friends"></td>
-        <td><img id="profile-button" src="friends-icon.png" alt="Profile"></td>
-		</tr>
-
-        <!-- Модальное окно с профилем -->
-        <div id="profile-modal" class="modal">
-            <div class="modal-content">
-                <span id="close-profile" class="close">&times;</span>
+	
+        <!-- Контент вкладок -->
+        <div id="tabs-content">
+            <div class="tab-content" id="profile-content">
                 <h2>Профиль игрока</h2>
                 <div id="profile-info">
                     <img id="profile-avatar" src="" alt="Avatar">
@@ -31,24 +23,136 @@
                     <p id="profile-start-date">Дата начала игры: </p>
                     <p id="profile-rank">Ранг: </p>
                 </div>
+				<div id="tabs-container">
+					<button class="tab-button" id="referral-tab">
+						<i class="fas fa-link"></i> Реферал
+					</button>
+					<button class="tab-button" id="profile-tab">
+						<i class="fas fa-user"></i> Профиль
+					</button>
+					<button class="tab-button" id="menu-tab">
+						<i class="fas fa-home"></i> Главное меню
+					</button>
+					<button class="tab-button" id="leaderboard-tab">
+						<i class="fas fa-trophy"></i> Топ игроков
+					</button>
+					<button class="tab-button" id="social-tab">
+						<i class="fas fa-share-alt"></i> Социальные сети
+					</button>
+				</div>
             </div>
-        </div>
-
-        <!-- Модальное окно с реферальной ссылкой -->
-        <div id="referral-modal" class="modal">
-            <div class="modal-content">
-                <span id="close-referral" class="close">&times;</span>
+			
+			
+			
+            <div class="tab-content" id="referral-content">
                 <h2>Ваша реферальная ссылка</h2>
                 <div id="referral-link-container">
                     <input type="text" id="referral-link" readonly>
                     <button id="referral-copy-btn">Копировать</button>
                 </div>
                 <button id="referral-share-btn">Поделиться</button>
+				<div id="tabs-container">
+					<button class="tab-button" id="referral-tab">
+						<i class="fas fa-link"></i> Реферал
+					</button>
+					<button class="tab-button" id="profile-tab">
+						<i class="fas fa-user"></i> Профиль
+					</button>
+					<button class="tab-button" id="menu-tab">
+						<i class="fas fa-home"></i> Главное меню
+					</button>
+					<button class="tab-button" id="leaderboard-tab">
+						<i class="fas fa-trophy"></i> Топ игроков
+					</button>
+					<button class="tab-button" id="social-tab">
+						<i class="fas fa-share-alt"></i> Социальные сети
+					</button>
+				</div>
+            </div>
+			
+			
+			
+			
+            <div class="tab-content" id="menu-content">
+                <p>Добро пожаловать в главное меню! Здесь будут доступны различные опции и настройки.</p>
+				<img id="top-image" src="top-image.png" alt="Top Image">
+				<div id="coins">0</div>
+				<img id="click-image" src="coin-image.png" alt="Click me">
+				<div id="tabs-container">
+					<button class="tab-button" id="referral-tab">
+						<i class="fas fa-link"></i> Реферал
+					</button>
+					<button class="tab-button" id="profile-tab">
+						<i class="fas fa-user"></i> Профиль
+					</button>
+					<button class="tab-button" id="menu-tab">
+						<i class="fas fa-home"></i> Главное меню
+					</button>
+					<button class="tab-button" id="leaderboard-tab">
+						<i class="fas fa-trophy"></i> Топ игроков
+					</button>
+					<button class="tab-button" id="social-tab">
+						<i class="fas fa-share-alt"></i> Социальные сети
+					</button>
+				</div>
+            </div>
+			
+			
+			
+            <div class="tab-content" id="leaderboard-content">
+                <h2>Топ игроков</h2>
+                <ul id="leaderboard-list">
+                    <!-- Список лидеров будет загружаться с сервера -->
+                </ul>
+				<div id="tabs-container">
+					<button class="tab-button" id="referral-tab">
+						<i class="fas fa-link"></i> Реферал
+					</button>
+					<button class="tab-button" id="profile-tab">
+						<i class="fas fa-user"></i> Профиль
+					</button>
+					<button class="tab-button" id="menu-tab">
+						<i class="fas fa-home"></i> Главное меню
+					</button>
+					<button class="tab-button" id="leaderboard-tab">
+						<i class="fas fa-trophy"></i> Топ игроков
+					</button>
+					<button class="tab-button" id="social-tab">
+						<i class="fas fa-share-alt"></i> Социальные сети
+					</button>
+				</div>
+            </div>
+			
+			
+			
+            <div class="tab-content" id="social-content">
+                <h2>Социальные сети</h2>
+                <p>Следите за нами в социальных сетях:</p>
+                <ul>
+                    <li><a href="https://www.instagram.com/your_game" target="_blank">Instagram</a></li>
+                    <li><a href="https://twitter.com/your_game" target="_blank">Twitter</a></li>
+                    <li><a href="https://www.facebook.com/your_game" target="_blank">Facebook</a></li>
+                    <li><a href="https://www.youtube.com/your_game" target="_blank">YouTube</a></li>
+                </ul>
+				<div id="tabs-container">
+					<button class="tab-button" id="referral-tab">
+						<i class="fas fa-link"></i> Реферал
+					</button>
+					<button class="tab-button" id="profile-tab">
+						<i class="fas fa-user"></i> Профиль
+					</button>
+					<button class="tab-button" id="menu-tab">
+						<i class="fas fa-home"></i> Главное меню
+					</button>
+					<button class="tab-button" id="leaderboard-tab">
+						<i class="fas fa-trophy"></i> Топ игроков
+					</button>
+					<button class="tab-button" id="social-tab">
+						<i class="fas fa-share-alt"></i> Социальные сети
+					</button>
+				</div>
             </div>
         </div>
-
-        <div id="referral-link"></div>
-        <ul id="leaderboard-list"></ul>
     </div>
     <script src="script.js"></script>
 </body>
