--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     const clickButton = document.getElementById('clickButton');
 
     // URL сервера для сохранения данных в Excel
-    const serverUrl = 'https://example.com/save-to-excel'; // Замените на свой URL
+    const serverUrl = 'https://only-click.onrender.com/save-to-excel'; // Замените на свой URL
 
     // Функция для сохранения данных в Excel
     async function saveDataToExcel() {
