--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <!-- Подключаем Telegram Web App SDK -->
+    <!-- Подключение Telegram Web App SDK -->
     <script async src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
