--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- Подключение Telegram Web App SDK -->
-    <script async src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
